# networth-tracker

./: .editorconfig  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
core/: settings.py  urls.py
frontend/: package-lock.json  package.json
networth_tracker/: admin.py  apis.py  apps.py  managers.py  models.py  serializer.py  tests.py  urls.py
networth_tracker/api/: filters.py  permissions.py  serializers.py  throttling.py  viewsets.py
networth_tracker/migrations/: 0001_initial.py  0002_alter_customuser_date_joined_account_bankaccount.py  0003_account_allocation_cash_and_more.py  0004_alter_customuser_date_joined_etf_etftransaction.py  0005_alter_customuser_date_joined_and_more.py  0006_remove_customuser_date_joined_account_created_at_and_more.py  0007_superannuation.py
networth_tracker/tests/: conftest.py  factories.py  test_authentication.py  test_managers.py  test_viewsets.py  tests.py
